отрефакторил CounterPlugin с использованием стримов