@@ -2,7 +2,6 @@ package ru.digitalhabbits.homework1.plugin;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -14,17 +13,14 @@ public class CounterPlugin
     @Override
     public String apply(@Nonnull String text) {
         // TODO: NotImplemented
-        List<String> strings = Arrays
-                .asList(text.split("\n").clone());
-        int stringsCount = strings.size();
-        List<String> words = new ArrayList<>();
-        for (String string : strings) {
-            words.addAll(
-                    Arrays.asList(string.replace("\n", " ").split("\\s"))
-            );
-        }
-        int wordsCount = words.size();
-        int lettersCount = text.length();
-        return stringsCount + ";" + wordsCount + ";" + lettersCount;
+        var strings = Arrays.asList(text.split("\n").clone());
+        var stringsCount = strings.size();
+        var wordsCount = strings.stream()
+                .map(string -> string.replaceAll("\n", "\\s"))
+                .map(formStr -> List.of(formStr.split("\\s")))
+                .mapToLong(List::size)
+                .sum();
+        var charCount = text.length();
+        return stringsCount + ";" + wordsCount + ";" + charCount;
     }
 }
